# AI-Blueprints

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.Trash-1000/files/: Evaluated - 2025 ISEF Project Abstracts.csv - 2025-07-29 18-55-57  README1_20250803_083118.md  README1_20250803_083118.md.html  README1_20250803_084711.md  README1_20250803_084711.md.html  README1_20250803_085839.md.html  README2_20250803_083118.md  README2_20250803_083118.md.html  README2_20250803_083901.md  README2_20250803_084711.md  README2_20250803_084711.md.html  README3_20250803_083118.md  README3_20250803_083118.md.html  README3_20250803_083901.md  README3_20250803_083901.md.html  README3_20250803_084711.md  README3_20250803_084711.md.html  README3_20250803_085839.md.html  README4_20250803_083118.md  README4_20250803_083118.md.html  README4_20250803_083901.md.html  README5_20250803_083118.md  README5_20250803_083118.md.html  README5_20250803_083901.md  README5_20250803_083901.md.html  README5_20250803_084711.md  README5_20250803_084711.md.html  README6_20250803_083901.md.html  README6_20250803_084711.md  README6_20250803_084711.md.html  README6_20250803_085839.md  results.json  vanilla-rag-with-langchain.ipynb
.Trash-1000/info/: Evaluated - 2025 ISEF Project Abstracts.csv - 2025-07-29 18-55-57.trashinfo  Evaluated - 2025 ISEF Project Abstracts.csv - 2025-07-29 19-20-27.trashinfo  Evaluated - 2025 ISEF Project Abstracts.csv - 2025-07-29 19-46-58.trashinfo  README1_20250803_083118.md.html.trashinfo  README1_20250803_083118.md.trashinfo  README1_20250803_083901.md.html.trashinfo  README1_20250803_083901.md.trashinfo  README1_20250803_084711.md.html.trashinfo  README1_20250803_084711.md.trashinfo  README1_20250803_085839.md.html.trashinfo  README1_20250803_085839.md.trashinfo  README2_20250803_083118.md.html.trashinfo  README2_20250803_083118.md.trashinfo  README2_20250803_083901.md.html.trashinfo  README2_20250803_083901.md.trashinfo  README2_20250803_084711.md.html.trashinfo  README2_20250803_084711.md.trashinfo  README2_20250803_085839.md.html.trashinfo  README2_20250803_085839.md.trashinfo  README3_20250803_083118.md.html.trashinfo  README3_20250803_083118.md.trashinfo  README3_20250803_083901.md.html.trashinfo  README3_20250803_083901.md.trashinfo  README3_20250803_084711.md.html.trashinfo  README3_20250803_084711.md.trashinfo  README3_20250803_085839.md.html.trashinfo  README3_20250803_085839.md.trashinfo  README4_20250803_083118.md.html.trashinfo  README4_20250803_083118.md.trashinfo  README4_20250803_083901.md.html.trashinfo  README4_20250803_083901.md.trashinfo  README4_20250803_084711.md.html.trashinfo  README4_20250803_084711.md.trashinfo  README4_20250803_085839.md.html.trashinfo  README4_20250803_085839.md.trashinfo  README5_20250803_083118.md.html.trashinfo  README5_20250803_083118.md.trashinfo  README5_20250803_083901.md.html.trashinfo  README5_20250803_083901.md.trashinfo  README5_20250803_084711.md.html.trashinfo  (+29 more)
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/ais-utils/: utils.py
.github/workflows/: greetings.yml  label.yml
data-science/: README.md
data-science-and-machine-learning/: README.md
data-science-and-machine-learning/handwritten_digit_classification_with_keras/: README.md
data-science-and-machine-learning/iris_flowers_classification_with_svm/: README.md
data-science-and-machine-learning/recommender_systems_with_tensorflow/: README.md
data-science/classification-with-svm/: README.md
data-science/classification-with-svm/demo/stream-lit-webapp/: main.py  pyproject.toml
data-science/classification-with-svm/demo/streamlit/: main-cloud  main-cloud.py  main.py  pyproject.toml
data-science/data-analysis-with-var/: README.md
data-science/data-analysis-with-var/demo/stream-lit-webapp/: main.py  pyproject.toml
deep-learning/: README.md
deep-learning/bert_qa/: README.md
deep-learning/classification-with-keras/: README.md  requirements.txt
deep-learning/image_super_resolution_with_FSRCNN/: README.md
deep-learning/question-answering-with-bert/: README.md  requirements.txt
deep-learning/question_answering_with_BERT/: README.md
deep-learning/recommendation-system-with-tensorflow/: README.md
deep-learning/recommendation-system-with-tensorflow/demo/streamlit/: README.md  main.py  pyproject.toml
deep-learning/recommendation-system-with-tensorflow/demo/streamlit-webapp/: main.py  pyproject.toml
deep-learning/spam-detection-with-nlp/: README.md  requirements.txt
deep-learning/super-resolution-with-fsrcnn/: README.md
deep-learning/super_resolution/: README.md
deep-learning/text-generation-with-rnn/: README.md  requirements.txt
deep-learning/text-generation-with-rnn/demo/streamlit/: main.py  pyproject.toml
deep-learning/text_generation/: README.md
deep-learning/text_generation_with_RNN/: README.md
generative-ai/: README.md
generative-ai/agentic-feedback-analyzer-with-langgraph/: README.md  requirements.txt
generative-ai/agentic-github-repo-analyzer-with-langgraph/: README.md  requirements.txt
generative-ai/agentic-github-repo-analyzer-with-langgraph/demo/streamlit/: main.py  pyproject.toml
generative-ai/agentic-github-repo-analyzer-with-langgraph/demo/streamlit/assets/: styles.css
generative-ai/agentic_rag_with_trt-llm_and_langgraph/: README.md
generative-ai/fine-tuning-with-orpo/: README.md  (+1 more)
generative-ai/text-generation-with-langchain/demo/streamlit/: README.md  main.py  pyproject.toml
generative-ai/text-summarization-with-langchain/demo/streamlit/: README.md  main.py  pyproject.toml
generative-ai/transcript-summarization-with-langchain/demo/streamlit-webapp/: pyproject.toml
generative-ai/vanilla-rag-with-langchain/demo/streamlit/: main.py  pyproject.toml
ngc-integration/: README.md
test/: bert_test.py  classification-with-svm_test.py  covid_test.py  deeplearning_test.py  first_script.yaml  full_script.yaml  genai_chatbot_test.py  local_image_script.yaml  main.ps1  main.sh  mnist_test.py  only_prompt.sh  ready_script.yaml  run_tests.sh  stocks_cudf_test.py  strings.yaml  test.sh  trial.sh
(+571 files in other folders)
