[tool.poetry]
name = "iris-streamlit-webapp"
version = "0.1.0"
description = "A Streamlit front-end for our Iris Flower Classifier"
authors = ["alvin kabwama <alvin.kabwama@hp.com>"]

[tool.poetry.dependencies]
python    = ">=3.8,<3.9.7 || >3.9.7"
streamlit = "^1.20"
requests  = "^2.31"
urllib3   = "^1.26"

[build-system]
requires    = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
