[project]
name = "recommender-system-streamlit-webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "gabisponciano", email = "gabriela.ponciano2016@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.25.0",
    "pillow>=9.0.0",
    "urllib3>=2.0.0"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"