[tool.poetry]
name = "text-generation-streamlit-webapp"
version = "0.1.0"
description = ""
authors = ["gabisponciano <gabriela.ponciano2016@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = ">=1.43.1,<2.0.0"
pillow = ">=11.3.0"
urllib3 = ">=2.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
