[tool.poetry]
name = "agentic-github-repo-analyzer-streamlit-webapp"
version = "0.1.0"
description = "A Streamlit front-end for AIS Agentic GitHub Repo Analyzer with LangGraph Blueprint Project"
authors = ["Ata Turhan <ata.turhan@hp.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = ">=1.43.1,<2.0.0"
pillow = ">=11.3.0"
urllib3 = ">=2.5.0"
langchain = ">=0.2.9,<0.3.0"
langchain-community = "0.2.9"
unstructured = "0.18.9"
pypdf = "5.8.0"
python-docx = "1.2.0"
msoffcrypto-tool = "5.4.2"
openpyxl = "3.1.5"
networkx = ">=3.2,<4.0"
markdown = ">=3.5,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
