[project]
name = "text-generation-streamlit-webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Diogo Vieira", email = "diogo.vieira@hp.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
