[project]
name = "text-summarization-streamlit-webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "ata-turhan", email = "ata.turhan@hp.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.25.0",
    "pypdf2>=3.0.0",
    "python-docx>=0.8.11"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "1.45.0"
requests = "^2.31.0"
pypdf2 = "^3.0.1"
python-docx = "^0.8.11"
pillow = "11.3.0"
urllib3 = "2.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
