[tool.poetry]
name = "text-summarization-streamlit-webapp"
version = "0.1.0"
description = ""
authors = ["ata-turhan <ata.turhan@hp.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "1.45.0"
requests = "^2.31.0"
pypdf2 = "^3.0.1"
python-docx = "^0.8.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
